[gd_scene load_steps=48 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://bg_blue.png" type="Texture" id=2]
[ext_resource path="res://effect/mothership/light_blue_01.png" type="Texture" id=3]
[ext_resource path="res://effect/mothership/light_blue_02.png" type="Texture" id=4]
[ext_resource path="res://effect/mothership/light_blue_03.png" type="Texture" id=5]
[ext_resource path="res://effect/mothership/light_blue_04.png" type="Texture" id=6]
[ext_resource path="res://effect/mothership/light_blue_05.png" type="Texture" id=7]
[ext_resource path="res://effect/mothership/light_blue_06.png" type="Texture" id=8]
[ext_resource path="res://effect/mothership/light_blue_07.png" type="Texture" id=9]
[ext_resource path="res://effect/mothership/light_red_01.png" type="Texture" id=10]
[ext_resource path="res://effect/mothership/light_red_02.png" type="Texture" id=11]
[ext_resource path="res://effect/mothership/light_red_03.png" type="Texture" id=12]
[ext_resource path="res://effect/mothership/light_red_04.png" type="Texture" id=13]
[ext_resource path="res://effect/mothership/light_red_05.png" type="Texture" id=14]
[ext_resource path="res://effect/mothership/light_red_06.png" type="Texture" id=15]
[ext_resource path="res://effect/mothership/light_red_07.png" type="Texture" id=16]
[ext_resource path="res://background.png" type="Texture" id=17]
[ext_resource path="res://background_tilecheck.png" type="Texture" id=18]
[ext_resource path="res://shield_close.png" type="Texture" id=19]
[ext_resource path="res://ui.gd" type="Script" id=20]
[ext_resource path="res://font/godom.ttf" type="DynamicFontData" id=21]
[ext_resource path="res://icon/archers_small.png" type="Texture" id=22]
[ext_resource path="res://next_panel.png" type="Texture" id=23]
[ext_resource path="res://energybar_bot.png" type="Texture" id=24]
[ext_resource path="res://energybar_top.png" type="Texture" id=25]
[ext_resource path="res://energybar_inside.png" type="Texture" id=26]
[ext_resource path="res://icon/archers_off.png" type="Texture" id=27]
[ext_resource path="res://icon/moveknight_on.png" type="Texture" id=28]
[ext_resource path="res://icon/moveknight_pressed.png" type="Texture" id=29]
[ext_resource path="res://shield_open.png" type="Texture" id=30]
[ext_resource path="res://effect/anchor_move01.png" type="Texture" id=31]
[ext_resource path="res://effect/anchor_move02.png" type="Texture" id=32]
[ext_resource path="res://effect/anchor_open01.png" type="Texture" id=33]
[ext_resource path="res://effect/anchor_open02.png" type="Texture" id=34]
[ext_resource path="res://effect/anchor_open03.png" type="Texture" id=35]
[ext_resource path="res://effect/anchor_open04.png" type="Texture" id=36]
[ext_resource path="res://unit/base/red.png" type="Texture" id=37]
[ext_resource path="res://unit/maincore/red.png" type="Texture" id=38]
[ext_resource path="res://unit/subcore/red_idle01.png" type="Texture" id=39]
[ext_resource path="res://unit/base/blue.png" type="Texture" id=40]
[ext_resource path="res://unit/maincore/blue.png" type="Texture" id=41]
[ext_resource path="res://unit/subcore/blue_idle01.png" type="Texture" id=42]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=3]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 21 )

[sub_resource type="StyleBoxEmpty" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="DynamicFont" id=5]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 21 )

[sub_resource type="DynamicFont" id=6]

size = 15
use_mipmaps = false
use_filter = false
font_data = ExtResource( 21 )

[sub_resource type="Animation" id=7]

length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Background/Shield:position")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 200, 25 ), Vector2( 200, 280 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OpeningNodes/AnchorRight:position")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 330, 440 ), Vector2( 330, 280 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("OpeningNodes/AnchorRight:animation")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "move", "open" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("OpeningNodes/AnchorLeft:position")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 70, 440 ), Vector2( 70, 280 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("OpeningNodes/AnchorLeft:animation")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "move", "open" ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Background/Shield:texture")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 19 ), ExtResource( 30 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("OpeningNodes/Mothership/Red:position")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -120 ), Vector2( 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("MothershipBG/RedLight:position")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 200, -117 ), Vector2( 200, -57 ) ]
}

[sub_resource type="SpriteFrames" id=8]

animations = [ {
"frames": [ ExtResource( 31 ), ExtResource( 32 ) ],
"loop": true,
"name": "move",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ) ],
"loop": false,
"name": "open",
"speed": 5.0
} ]

[node name="game" type="Node"]

script = ExtResource( 1 )

[node name="MothershipBG" type="Node" parent="."]


[node name="BlueBaseBottom" type="Sprite" parent="MothershipBG"]

position = Vector2( 200, 600 )
rotation_deg = 180.0
texture = ExtResource( 2 )

[node name="BlueLight" type="AnimatedSprite" parent="MothershipBG"]

position = Vector2( 200, 617 )
rotation_deg = 180.0
z = 1
z_as_relative = false
frames = SubResource( 1 )
animation = "default"
frame = 5
playing = true

[node name="RedLight" type="AnimatedSprite" parent="MothershipBG"]

position = Vector2( 200, -57 )
z = 1
z_as_relative = false
frames = SubResource( 2 )
animation = "default"
frame = 25
playing = true

[node name="Units" type="Node2D" parent="."]

visible = false

[node name="Spells" type="Node2D" parent="."]


[node name="Projectiles" type="Node" parent="."]


[node name="Background" type="CanvasLayer" parent="."]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Stars" type="Sprite" parent="Background"]

position = Vector2( 200, 320 )
z = -1
texture = ExtResource( 17 )

[node name="Tile" type="Sprite" parent="Background"]

visible = false
position = Vector2( 200, 320 )
texture = ExtResource( 18 )

[node name="Shield" type="Sprite" parent="Background"]

position = Vector2( 200, 280 )
texture = ExtResource( 19 )

[node name="UI" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script = ExtResource( 20 )

[node name="RemainTime" type="Label" parent="UI"]

anchor_left = 1
anchor_right = 1
focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 50.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "3:00"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Next" type="TextureRect" parent="UI"]

anchor_bottom = 1
focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 12.0
margin_top = 607.0
margin_right = 42.0
margin_bottom = 3.0
texture = ExtResource( 22 )
stretch_mode = 0

[node name="Panel" type="TextureRect" parent="UI"]

anchor_bottom = 1
focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 12.0
margin_top = 597.0
margin_right = 42.0
margin_bottom = 35.0
texture = ExtResource( 23 )
stretch_mode = 0

[node name="Energy" type="TextureProgress" parent="UI"]

anchor_top = 1
anchor_bottom = 1
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 60.0
margin_top = 14.0
margin_right = 376.0
margin_bottom = 0.0
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 50.0
exp_edit = false
rounded = false
texture_under = ExtResource( 24 )
texture_over = ExtResource( 25 )
texture_progress = ExtResource( 26 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )

[node name="Card1" type="TextureButton" parent="UI"]

anchor_top = 1
anchor_bottom = 1
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 60.0
margin_top = 75.0
margin_right = 138.0
margin_bottom = 17.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
texture_normal = ExtResource( 27 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Card2" type="TextureButton" parent="UI"]

anchor_top = 1
anchor_bottom = 1
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 140.0
margin_top = 75.0
margin_right = 218.0
margin_bottom = 17.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
texture_normal = ExtResource( 27 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Card3" type="TextureButton" parent="UI"]

anchor_top = 1
anchor_bottom = 1
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 220.0
margin_top = 75.0
margin_right = 298.0
margin_bottom = 17.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
texture_normal = ExtResource( 27 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Card4" type="TextureButton" parent="UI"]

anchor_top = 1
anchor_bottom = 1
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 300.0
margin_top = 75.0
margin_right = 378.0
margin_bottom = 17.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
texture_normal = ExtResource( 27 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Card_" type="TextureButton" parent="UI"]

visible = false
anchor_top = 1
anchor_bottom = 1
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 310.0
margin_top = 75.0
margin_right = 368.0
margin_bottom = 17.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
texture_normal = ExtResource( 28 )
texture_focused = ExtResource( 29 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="CardGuide" type="Node2D" parent="UI"]

visible = false
rotation_deg = -180.0

[node name="Result" type="Button" parent="UI"]

visible = false
anchor_right = 1
anchor_bottom = 1
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Label" type="Label" parent="UI/Result"]

anchor_right = 1
anchor_bottom = 1
focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Game Over"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="OpeningAnim" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/opening = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "opening"

[node name="OpeningNodes" type="Node2D" parent="."]

editor/display_folded = true
visible = false

[node name="AnchorLeft" type="AnimatedSprite" parent="OpeningNodes"]

position = Vector2( 70, 280 )
frames = SubResource( 8 )
animation = "open"
frame = 3
playing = true

[node name="AnchorRight" type="AnimatedSprite" parent="OpeningNodes"]

position = Vector2( 330, 280 )
frames = SubResource( 8 )
animation = "open"
frame = 3
playing = true

[node name="Mothership" type="Node2D" parent="OpeningNodes"]


[node name="Red" type="Node2D" parent="OpeningNodes/Mothership"]


[node name="Base" type="Sprite" parent="OpeningNodes/Mothership/Red"]

position = Vector2( 200, 35 )
texture = ExtResource( 37 )

[node name="Maincore" type="Sprite" parent="OpeningNodes/Mothership/Red"]

position = Vector2( 200, 80 )
texture = ExtResource( 38 )

[node name="SubcoreLeft" type="Sprite" parent="OpeningNodes/Mothership/Red"]

position = Vector2( 70, 90 )
texture = ExtResource( 39 )

[node name="SubcoreRight" type="Sprite" parent="OpeningNodes/Mothership/Red"]

position = Vector2( 330, 90 )
texture = ExtResource( 39 )

[node name="Blue" type="Node2D" parent="OpeningNodes/Mothership"]

editor/display_folded = true

[node name="Base" type="Sprite" parent="OpeningNodes/Mothership/Blue"]

position = Vector2( 200, 525 )
rotation_deg = -180.0
texture = ExtResource( 40 )

[node name="Maincore" type="Sprite" parent="OpeningNodes/Mothership/Blue"]

position = Vector2( 200, 480 )
rotation_deg = -180.0
texture = ExtResource( 41 )

[node name="SubcoreLeft" type="Sprite" parent="OpeningNodes/Mothership/Blue"]

position = Vector2( 70, 470 )
rotation_deg = -180.0
texture = ExtResource( 42 )

[node name="SubcoreRight" type="Sprite" parent="OpeningNodes/Mothership/Blue"]

position = Vector2( 330, 470 )
rotation_deg = -180.0
texture = ExtResource( 42 )
